<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfor">


    <TextView
        android:id="@+id/textt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/zeon"
        android:fontFamily="@font/architects_daughter"
        android:textSize="50sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/join"
        android:fontFamily="@font/architects_daughter"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/textt"
        app:layout_constraintStart_toStartOf="@+id/textt"
        app:layout_constraintTop_toBottomOf="@+id/textt" />

    <TextView
        android:id="@+id/UserNamee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textt2" />

    <EditText
        android:id="@+id/etTextt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="120dp"
        android:paddingTop="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNamee" />

    <TextView
        android:id="@+id/surname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTextt" />

    <EditText
        android:id="@+id/etText3"
        android:layout_height="wrap_content"
        android:paddingTop="1dp"
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintEnd_toEndOf="@id/etTextt"
        app:layout_constraintStart_toStartOf="@id/etTextt"
        app:layout_constraintTop_toBottomOf="@id/surname" />

    <TextView
        android:id="@+id/Login_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/login_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etText3" />

    <EditText
        android:id="@+id/etText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="120dp"
        android:paddingTop="1dp"
        app:layout_constraintEnd_toEndOf="@+id/etTextt"
        app:layout_constraintStart_toStartOf="@+id/etTextt"
        app:layout_constraintTop_toBottomOf="@+id/Login_Name" />


    <TextView
        android:id="@+id/passwordd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etText4" />

    <EditText
        android:id="@+id/etText22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="120dp"
        android:paddingTop="1dp"
        app:layout_constraintEnd_toEndOf="@+id/etTextt"
        app:layout_constraintStart_toStartOf="@+id/etTextt"
        app:layout_constraintTop_toBottomOf="@+id/passwordd" />

    <Button
        android:id="@+id/buttonn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etText22" />

    <TextView
        android:id="@+id/questonn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:onClick="setClick2"
        android:text="@string/already_a_member"
        app:layout_constraintEnd_toEndOf="@+id/buttonn"
        app:layout_constraintStart_toStartOf="@+id/buttonn"
        app:layout_constraintTop_toBottomOf="@id/buttonn" />




</androidx.constraintlayout.widget.ConstraintLayout>